# gstreamer-ivr

./: CMakeLists.txt  README.md  demo.cpp  ms_core.hpp  ms_core_gst.cpp  ms_core_gst.hpp  ms_core_gst_builder.cpp  ms_core_gst_builder.hpp  ms_demo.cpp  ms_gstreamer_core.hpp  ms_hmp_interface.cpp  ms_hmp_interface.hpp  ms_hmp_manager.hpp  ms_hmp_memory.hpp  ms_hmp_parser.hpp  ms_hmp_server.hpp  ms_hmp_service.hpp  ms_http_interface.hpp  ms_include.hpp  ms_interface_handler.hpp  ms_main.cpp  ms_manager.hpp  ms_memory.hpp  ms_message_route.hpp  ms_routable.hpp  ms_singleton.hpp  ms_tcp_listener.hpp  ms_thread_pool.hpp  test1.cpp
demo/: README.md
demo/mixer/: READEME.md  audiomixer.py  udpmultisnk.py  videomixer.py
demo/record/: audio_record_bidirectional.py  audio_record_tee.py
demo/rtsp/: rtsp_server.py
demo/send_audio/: send_beep.py  send_file.py  send_ivr.py
demo/send_video/: send_video.py  send_video_h264.py
expected/: expected_demo.cpp  manual_expected.hpp
liboops/: CMakeLists.txt  configure.cpp  configure.hpp  define.hpp  event.hpp  tcp_acceptor.cpp  tcp_acceptor.hpp  utils.cpp  utils.hpp
opt/: CMakeLists.txt
opt/test/: CMakeLists.txt  expected.hpp  test.cpp
opt/test/gst/: CMakeLists.txt  main.cpp
